--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
+    <script src="https://kit.fontawesome.com/036fd78acd.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>MiWeb</title>
 </head>
@@ -46,11 +47,14 @@
             </form>
     </section>
     <br>
-    ul>li*3>a.hola${home$}
     <br>
     <footer>
-        <div style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C149.99,150.00 349.20,-49.98 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: rgb(78, 171, 253);"></path></svg></div>
-        © 2022 Charlywebs - Todos los derechos reservados
+        <a href="#" class="fa-brands fa-instagram"></a>
+        <a href="#" class="fa-brands fa-github"></a>
+        <a href="#" class="fa-brands fa-behance"></a>
+        <a href="#" class="fa-brands fa-whatsapp"></a>
+
+        <h4>© 2022 Charlywebs - Todos los derechos reservados</h4>
     </footer>
     
 </body>
