--- a/pages/about.html
+++ b/pages/about.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/style.css">
-    <script src="https://kit.fontawesome.com/036fd78acd.js" crossorigin="anonymous"></script>
     <link rel="shortcut icon" href="../assets/favicon.ico" type="image/x-icon">
     <title>MiWeb</title>
 </head>
@@ -19,6 +18,7 @@
         </div>
         <nav> 
         <a href="../index.html">Inicio</a>
+        <a href="./portfolio.html">Portfolio</a> 
         <a href="./contact.html">Contacto</a>
         </nav>
     </header>
@@ -34,12 +34,13 @@
     <br> 
     <br>
     <footer>
-        <a href="#" class="fa-brands fa-instagram"></a>
-        <a href="#" class="fa-brands fa-github"></a>
-        <a href="#" class="fa-brands fa-behance"></a>
-        <a href="#" class="fa-brands fa-whatsapp"></a>
-
-        <h4>© 2022 Charlywebs - Todos los derechos reservados</h4>
+        <div class="footeritems">
+            <a href="https://www.instagram.com" target="_blank"><img class="fa-brands fa-instagram" src="../assets/Imagenes/instagram-brands.svg"></img></a>
+            <a href="https://github.com/" target="_blank"><img class="fa-brands fa-github" src="../assets/Imagenes/github-brands.svg"></img></a>
+            <a href="https://es-la.facebook.com/" target="_blank"><img class="fa-brands fa-facebook" src="../assets/Imagenes/facebook-brands.svg"></img></a>
+            <a href="https://web.whatsapp.com/" target="_blank"><img class="fa-brands fa-whatsapp" src="../assets/Imagenes/whatsapp-brands.svg"></img></a>
+            <h4>© 2022 Charlywebs - Todos los derechos reservados</h4>
+        </div>
     </footer>
     
 </body>
