--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -16,37 +16,20 @@
             Mi Primera Página
             </h1>
         </div>
-    <nav> 
+        <nav> 
         <a href="../index.html">Inicio</a>
         <a href="./about.html">Sobre Nosotros</a>
-        <a href="./portfolio.html">Portfolio</a>  
-    </nav>
+        <a href="./contact.html">Contacto</a>
+        </nav>
     </header>
-        
-    <section>
-        <h2>Contacto</h2>
-            <form action="mailto:charlyvlp@gmail.com" method="post" enctype="text/plain" target="_blank">
-                <label for="name">Nombre</label>
-                <input type="text" id="name" autofocus/>
-                <br/>
-                <br/>
-                <label for="surname">Apellido</label>
-                <input type="text" id="surname"/>
-                <br/>
-                <br/>
-                <label for="email">Correo Eléctronico</label>
-                <input type="text" id="email"/>
-                <br/>
-                <br/>
-                <label for="tel">Teléfono de Contacto</label>
-                <input type="tel" id="tel" placeholder="Ej: +5493513573871" pattern="[0-9()#&amp;+*-=.]+" title="Sólo números y carácteres telefónicos (#, -, *, etc) son aceptados.">
-                <br/>
-                <br/>
-                <input class= "submit" type="submit" value="¡Enviar Ya!">
 
-            </form>
-    </section>
-    <br>
+    <div class="portfolio">
+        <h2>Sobre Nosotros</h2>
+        <P>Acá va todo el texto de este artículo. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
+        <h4>Fuente:UTN.BA</h4>
+    </div>
+                 
+    <br> 
     <br>
     <footer>
         <div class="footeritems">
