--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -24,8 +24,8 @@
     </header>
 
     <div class="portfolio">
-        <h2>Sobre Nosotros</h2>
-        <P>Acá va todo el texto de este artículo. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</P>
+        <h2>Portfolio</h2>
+        <P>Acá van todas las fotos.</P>
         <h4>Fuente:UTN.BA</h4>
     </div>
                  
