--- a/pages/contact.html
+++ b/pages/contact.html
@@ -50,10 +50,11 @@
     <br>
     <footer>
         <div class="footeritems">
-            <a href="https://www.instagram.com" target="_blank"><img class="fa-brands fa-instagram" src="../assets/Imagenes/instagram-brands.svg"></img></a>
-            <a href="https://github.com/" target="_blank"><img class="fa-brands fa-github" src="../assets/Imagenes/github-brands.svg"></img></a>
-            <a href="https://es-la.facebook.com/" target="_blank"><img class="fa-brands fa-facebook" src="../assets/Imagenes/facebook-brands.svg"></img></a>
-            <a href="https://web.whatsapp.com/" target="_blank"><img class="fa-brands fa-whatsapp" src="../assets/Imagenes/whatsapp-brands.svg"></img></a>
+            <a href="https://www.instagram.com" target="_blank" title="Instagram"><img class="fa-brands fa-instagram" src="../assets/Imagenes/instagram-brands.svg"></img></a>
+            <a href="https://github.com/" target="_blank" title="GitHub"><img class="fa-brands fa-github" src="../assets/Imagenes/github-brands.svg"></img></a>
+            <a href="https://es-la.facebook.com/" target="_blank" title="Facebook"><img class="fa-brands fa-facebook" src="../assets/Imagenes/facebook-brands.svg"></img></a>
+            <a href="https://web.whatsapp.com/" target="_blank" title="WhatsApp Web"><img class="fa-brands fa-whatsapp" src="../assets/Imagenes/whatsapp-brands.svg"></img></a>
+            <a href="https://www.frba.utn.edu.ar/" target="_blank" title="MiWeb"><img class="fa-brands earth-americas-solid" src="../assets/Imagenes/earth-americas-solid.svg"></img></a>
             <h4>© 2022 Charlywebs - Todos los derechos reservados</h4>
         </div>
     </footer>
