--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,14 +9,14 @@
     <title>MiWeb</title>
 </head>
 <body>
-    <header>
+    <header class="header-logo">
         <div class="logo">
             <img src="../assets/favicon.ico" alt="logocompania" class="logo-img">
             <h1 class="logo-nombre">
             Mi Primera Página
             </h1>
         </div>
-    <nav> 
+    <nav class="paginas"> 
         <a href="../index.html">Inicio</a>
         <a href="./about.html">Sobre Nosotros</a>
         <a href="./portfolio.html">Portfolio</a>  
